syntax = "proto3";

option go_package = "github.com/syahrizalfauzi/go-grpc-tryout/proto";

service User {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    UserProfile profile = 2;
}

message UserProfile {
    string username = 1;
    string email = 2;
    string phone = 3;
    string address = 4;
}